# FYS-STK3155

./: .gitignore  README.md
.github/workflows/: black.yml
Project1/: Project1.tex  README.md  refs.bib
Project1/DataFiles/: test.py
Project1/ipynb/: Project1.ipynb
Project1/src/: Data.py  FrankeMain.py  Kfold.py  Models.py  OLSRegression.py  RegularizedRegression.py  TerrainMain.py  heatmap.py  metrics.py  plotBetas.py  predictedSurface.py  resampling.py
Project2/: Project2.tex  README.md  pyproject.toml  refs.bib  requirements.txt
Project2/src/: Activators.py  CostFuncs.py  Gradients.py  NeuralNetwork.py  Schedules.py  grad_analysis.py  plotutils.py  utils.py
Project2/src/activator_plots/: LRELU_plot.py  RELU_plot.py  sigmoid_plot.py  simple_gradient_descent_x^2.py
Project2/src/jupyter_analysis/: FFNN_analysis_deprecated.ipynb  cancer_classification_analysis.ipynb  logistic_regression.ipynb
Project3/: Project3.tex  README.md  pyproject.toml  refs.bib  requirements.txt
Project3/src/: DNN_heat.py  FiniteDiffHeat.py  FiniteDiffMain.py  plotutils.py  utils.py
Project3/src/Main_structure/: FiniteDiffMain.py  plotutils.py
