[build-system]
requires = [
    "setuptools>=61",
]
build-backend = "setuptools.build_meta"

[project]
version = "2023.11.12"
requires-python = ">=3.8, <=3.11.6"
license = {text = "MIT License"}
name = "project3"
readme = "README.md"
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
# read dependencies from requirements.txt
dependencies ={file = "requirements.txt"}